--- a/res/xml/smartbar_settings.xml
+++ b/res/xml/smartbar_settings.xml
@@ -67,16 +67,22 @@
         settings:units="%"
         android:persistent="false" />
 
+    <PreferenceScreen
+        android:key="pixel_anim"
+        android:fragment="com.android.settings.smartnav.PixelAnimDurationSettings"
+        android:title="@string/pixel_anim_title"
+        android:summary="@string/pixel_anim_summary"/>
+
     <com.blissroms.blissify.preference.SecureSettingSwitchPreference
         android:key="smartbar_doubletap_sleep"
         android:title="@string/smartbar_double_tap_sleep_title"
         android:summary="@string/smartbar_double_tap_sleep_summary"
         android:defaultValue="false" />
 
-    <com.blissroms.blissify.preference.SecureSettingSwitchPreference
+    <!--<com.blissroms.blissify.preference.SecureSettingSwitchPreference
         android:key="one_hand_mode_enabled"
         android:title="@string/one_handed_mode_title"
         android:summary="@string/one_handed_mode_summary"
-        android:defaultValue="false" />
+        android:defaultValue="false" /> -->
 
 </PreferenceScreen>
