Add in Bliss navbar options
Change-Id: I37708108063ce0a0bd265d86c04b1f74f5fa4c13

--- a/res/xml/navigation_bar.xml
+++ b/res/xml/navigation_bar.xml
@@ -45,10 +45,18 @@
             android:summary="@string/fling_settings_summary"
             android:fragment="com.android.settings.smartnav.FlingSettings" />
 
+     <PreferenceScreen
+                android:key="default_settings"
+                android:title="@string/buttons_navbar_title"
+                android:summary="@string/buttons_navbar_summary"
+                android:icon="@drawable/ic_navbar"
+                android:fragment="com.blissroms.blissify.fragments.buttons.NavBar"
+                />
+
         <Preference
-            android:key="default_settings"
-            android:title="@string/default_settings"
-            android:summary="@string/default_settings_summary"
+            android:key="swipeup_gesture_settings"
+            android:title="@string/swipe_up_to_switch_apps_title"
+            android:summary="@string/swipeup_settings_summary"
             android:fragment="com.android.settings.gestures.SwipeUpGestureSettings" />
 
     </PreferenceCategory>
