--- a/res/xml/smartbar_settings.xml
+++ b/res/xml/smartbar_settings.xml
@@ -18,6 +18,10 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >
 
+    <Preference 
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
+
     <Preference
         android:key="smartbar_editor_mode"
         android:title="@string/smartbar_editor_title"
