--- a/res/xml/fling_settings.xml
+++ b/res/xml/fling_settings.xml
@@ -19,6 +19,10 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/fling_interface" >
 
+    <Preference 
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
+
     <PreferenceCategory
         android:key="eos_actions_swipe_category"
         android:title="@string/fling_swipe_actions" >
