--- a/res/xml/pixel_anim_duration.xml
+++ b/res/xml/pixel_anim_duration.xml
@@ -19,6 +19,10 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" 
     android:title ="@string/pixel_anim_title">
 
+    <Preference 
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
+
     <Preference
             android:title="@string/pixel_anim_title"
             android:summary="@string/pixel_anim_warning"
