--- a/res/xml/pulse_settings.xml
+++ b/res/xml/pulse_settings.xml
@@ -19,6 +19,10 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/pulse_settings" >
 
+    <Preference 
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
+
     <SwitchPreference
         android:key="eos_fling_show_pulse"
         android:title="@string/fling_show_pulse_title"
